fix sizing on mobile

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;    
+}
+
 .jumbotron{
 	background-image: url('/imgs/comChip2.jpg');
 	background-size: cover;
@@ -105,10 +114,16 @@ body{
   @media (max-width: 576px) { 
   
     .title h1{
-        font-size: 7em;   
+        font-size: 5em;   
     }
+
+    .thumbnail{
+        width: 350px;
+        height: 350px;
+    }
+    
     #sectionTitle{
-        font-size: 5em;
+        font-size: 4em;
     }
     .card{
         margin-bottom: 25px;
@@ -127,6 +142,10 @@ body{
   
     .title h1{
         font-size: 7em;   
+    }
+    .thumbnail{
+        width: 350px;
+        height: 350px;
     }
     #sectionTitle{
         font-size: 5em;
